--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,5 +1,6 @@
-<body class="min-h-screen bg-background">    
-    <header class="z-50 h-24 w-screen px-4 sticky top-0 flex grow items-center bg-indigo drop-shadow-2xl sm:h-28 lg:px-0">
+<body class="min-h-screen bg-background">
+    <!-- Header -->
+    <header class="z-50 h-20 w-screen px-4 sticky top-0 flex grow items-center bg-indigo drop-shadow-2xl sm:h-28 lg:px-0">
         <!-- Logo y nombre de la institucion -->
         <div class="w-1/3 px-5 flex grow justify-between items-center sm:px-10 lg:px-6 xl:px-10">
             <div class="flex items-center xl:gap-5">
@@ -16,10 +17,10 @@
         <!-- Contenedor de links -->
         <div class="w-2/3 hidden px-40 gap-16 justify-end items-center text-lg text-white font-semibold xl:text-xl xl:flex xl:px-48 xl:gap-24" >
             <a href="" class="hover:text-darkYellow">Inicio</a>
-            <a href="#" class="text-center hover:text-darkYellow">Sobre Nosotros</a>
+            <a href="" class="text-center hover:text-darkYellow">Sobre Nosotros</a>
             <a href="#carreras" class="hover:text-darkYellow">Carreras</a>
-            <a href="#" class="hover:text-darkYellow">Foro</a>
-            <a href="#" class="hover:text-darkYellow">Contacto</a>
+            <a href="" class="hover:text-darkYellow">Foro</a>
+            <a href="" class="hover:text-darkYellow">Contacto</a>
         </div>
     </header>
     
@@ -36,62 +37,76 @@
         </div>
         
         <!-- Noticias -->
-        <div class="h-[160px] w-screen px-2 py-4 mt-4 flex sm:px-16 md:px-4 md:gap-4 lg:px-10 lg:gap-2 lg:h-[200px] xl:h-64 xl:gap-14 xl:px-24">
-            <button class="w-8 flex justify-center items-center active:animate-shrink active:text-xl" (click)="slideBack(); resetTimer()"> 
+        <div class="w-screen h-[292px] px-2 pt-4 flex sm:px-16 md:px-4 md:gap-4 lg:px-10 lg:mb-28 lg:gap-2 xl:gap-14 xl:px-24">
+            <button class="w-8 h-[160px] flex justify-center items-center active:animate-shrink active:text-xl lg:h-[200px] xl:h-64" (click)="slideBack(); resetTimer()"> 
                 <img class="w-4" src="../../assets/chevron-left.svg" alt="&lt;">
             </button>
-            <!-- Contenedor de imagenes -->
-            <div class="w-full h-full flex justify-center sm:justify-between md:gap-10 lg:justify-center lg:gap-12 xl:justify-between xl:gap-4">
-                <img draggable="false" class="w-[250px] h-full swiper-img md:w-[320px] md:mx-0 lg:w-[360px] xl:w-4/12" src="../../assets/noticia.jpg" alt="Noticia">
-                <img draggable="false" class="hidden h-full w-[320px] swiper-img md:block lg:w-[360px] xl:w-4/12" src="../../assets/noticia_2.jpg" alt="Noticia">
-                <img draggable="false" class="hidden h-full w-4/12 swiper-img xl:block" src="../../assets/noticia_3.jpg" alt="Noticia">
+            <!-- Contenedor de Noticias -->
+            <div class="w-full h-full flex justify-center sm:justify-between md:gap-4 lg:justify-center lg:gap-12 xl:justify-between xl:gap-4">
+                <!-- Noticia -->
+                <div class="swiper-img w-[250px] h-full md:w-[320px] md:mx-0 lg:w-[360px] xl:w-4/12">
+                    <img draggable="false" class="w-full h-[160px] mb-4 lg:h-[200px] xl:h-64" src="../../assets/noticia.jpg" alt="Noticia">
+                    <h1 class="text-base font-semibold md:text-xl">Visita la galeria de Arte ubicada dentro de la Universidad</h1>
+                </div>
+                
+                <!-- Noticia -->
+                <div class="swiper-img hidden h-full w-[320px] md:block lg:w-[360px] xl:w-4/12">
+                    <img draggable="false" class="w-full h-[160px] mb-4 lg:h-[200px] xl:h-64" src="../../assets/noticia_2.jpg" alt="Noticia">
+                    <h1 class="text-base font-semibold md:text-xl">Te invitamos a la conferencia de Arte Moderno con Alejandro Vargas</h1>
+                </div>
+                
+                <!-- Noticia -->
+                <div class="swiper-img hidden h-full w-4/12 xl:block">
+                    <img draggable="false" class="w-full mb-4 lg:h-[200px] xl:h-64" src="../../assets/noticia_3.jpg" alt="Noticia">
+                    <h1 class="text-base font-semibold md:text-xl">Publica tus obras en el foro oficial para compartir tu arte</h1>
+                </div>
             </div>
-            <button class="w-8 flex justify-center items-center active:animate-shrink active:text-xl" (click)="slideBack(); resetTimer()"> 
+            <button class="w-8 h-[160px] flex justify-center items-center active:animate-shrink active:text-xl lg:h-[200px] xl:h-64" (click)="slideForward(); resetTimer()"> 
                 <img class="w-4" src="../../assets/chevron-right.svg" alt="&lt;">
             </button>
         </div>
         
         
         <!-- Eventos -->
-        <div class="py-8 px-9 sm:px-20 md:px-16 lg:px-32 xl:px-[11.5rem]">
+        <div class="px-9 sm:px-20 md:px-16 md:my-6 lg:px-32 lg:my-4 xl:px-[11.5rem]">
             <h1 class="text-2xl font-bold text-savoyBlue sm:text-4xl">Proximos Eventos</h1>
             <div class="w-full h-[2px] bg-savoyBlue my-4"></div>
             
             <!-- Contenedor de Eventos -->
-            <div class="w-full h-full flex flex-col justify-between gap-4 sm:flex-row lg:gap-4 xl:gap-4">                
+            <div class="w-full h-full flex flex-col justify-between gap-4 sm:flex-row md:gap-4 lg:gap-5 xl:gap-4">                
                 <!-- Evento -->
-                <div class="h-20 w-full flex sm:w-1/3 sm:min-h-[105px]">
+                <div class="h-20 w-full flex sm:w-1/3 sm:min-h-[105px] md:h-28">
                     <div class="w-1/4 bg-white text-xl text-indigo font-bold flex flex-col items-center sm:max-w-[92px] sm:w-1/4 sm:text-2xl">
                         <h1 class="h-2/3 w-full flex items-center justify-center font-bold text-2xl">25</h1>
-                        <h1 class="h-1/3 w-full flex items-center justify-center bg-darkYellow">Nov</h1>
+                        <h1 class="h-1/3 w-full flex items-center justify-center bg-darkYellow md:text-lg">Nov</h1>
                     </div>
-                    <div class="w-3/4 max-w-[380px] pl-4 flex flex-col gap-0 text-md sm:w-full sm:text-xl lg:text-lg xl:text-xl">
-                        <h1 class="h-2/3 w-full flex items-center font-bold">Festival Universitario de las Artes</h1>
-                        <h1 class="h-1/3 w-full flex items-center font-semibold">16:30</h1>
+                    <div class="w-3/4 max-w-[380px] pl-4 text-sm flex flex-col gap-0 sm:w-full sm:text-xl md:text-base md:pl-2 lg:pl-4 xl:text-xl">
+                        <h1 class="h-2/3 w-full flex items-center font-bold">Conferencia de Arte Moderno con Alejandro Vargas</h1>
+                        <h1 class="h-1/3 w-full flex items-center font-semibold">14:30</h1>
                     </div>
                 </div>
                 
                 <!-- Evento -->
-                <div class="h-20 w-full flex sm:w-1/3 sm:min-h-[105px]">
+                <div class="h-20 w-full flex sm:w-1/3 sm:min-h-[105px] md:h-28">
                     <div class="w-1/4 bg-white text-xl text-indigo font-bold flex flex-col items-center sm:max-w-[92px] sm:w-1/4 sm:text-2xl">
                         <h1 class="h-2/3 w-full flex items-center justify-center font-bold text-2xl">27</h1>
-                        <h1 class="h-1/3 w-full flex items-center justify-center bg-darkYellow">Nov</h1>
+                        <h1 class="h-1/3 w-full flex items-center justify-center bg-darkYellow md:text-lg">Nov</h1>
                     </div>
-                    <div class="w-3/4 max-w-[380px] pl-4 flex flex-col gap-0 text-md sm:w-full sm:text-xl lg:text-lg xl:text-xl">
+                    <div class="w-3/4 max-w-[380px] pl-4 flex flex-col gap-0 sm:w-full sm:text-xl md:text-base md:pl-2 lg:pl-4 xl:text-xl">
                         <h1 class="h-2/3 w-full flex items-center font-bold">Curso de Pintura para principiantes</h1>
-                        <h1 class="h-1/3 w-full flex items-center font-semibold">17:30</h1>
+                        <h1 class="h-1/3 w-full flex items-center font-semibold">16:00</h1>
                     </div>
                 </div>
                 
                 <!-- Evento -->
-                <div class="h-20 w-full flex sm:w-1/3 sm:min-h-[105px]">
+                <div class="h-20 w-full flex sm:w-1/3 sm:min-h-[105px] md:h-28">
                     <div class="w-1/4 bg-white text-xl text-indigo font-bold flex flex-col items-center sm:max-w-[92px] sm:w-1/4 sm:text-2xl">
                         <h1 class="h-2/3 w-full flex items-center justify-center font-bold text-2xl">30</h1>
-                        <h1 class="h-1/3 w-full flex items-center justify-center bg-darkYellow">Nov</h1>
+                        <h1 class="h-1/3 w-full flex items-center justify-center bg-darkYellow md:text-lg">Nov</h1>
                     </div>
-                    <div class="w-3/4 max-w-[380px] pl-4 flex flex-col gap-0 text-md sm:w-full sm:text-xl lg:text-lg xl:text-xl">
+                    <div class="w-3/4 max-w-[380px] pl-4 flex flex-col gap-0 sm:w-full sm:text-xl md:text-base md:pl-2 lg:pl-4 xl:text-xl">
                         <h1 class="h-2/3 w-full flex items-center font-bold">Exposicion de Arte</h1>
-                        <h1 class="h-1/3 w-full flex items-center font-semibold">12:00</h1>
+                        <h1 class="h-1/3 w-full flex items-center font-semibold">12:30</h1>
                     </div>
                 </div>
             </div>
@@ -130,6 +145,51 @@
                     <div class="w-full h-full flex items-center bg-black/50 absolute top-0 left-0 hover:bg-black/70">
                         <h1 class="w-full">Escultura</h1>
                     </div>
+                </div>
+            </div>
+        </div>     
+        
+        
+        <!-- Testimonios -->
+        <div class="px-8 sm:px-20 md:px-16 md:py-6 lg:px-32 xl:px-[11.5rem]">
+            <h1 class="text-2xl py-4 font-bold text-savoyBlue sm:text-4xl">Testimonios</h1>
+
+            <!-- Testimonio -->
+            <div class="w-full flex flex-col mt-2 mb-12 md:flex-row">
+                <!-- Persona -->
+                <div class="w-full flex items-center md:text-center md:justify-center md:w-1/3 md:pr-4 md:flex-col lg:w-1/4 xl:w-1/6 xl:mr-16 xl:items-center xl:text-center">
+                    <img class="w-1/3 mr-6 rounded-full mb-4 md:w-3/4 md:mr-0" src="../../assets/estudiante_1.jpg" alt="Estudiante" draggable="false">
+                    <div class="w-2/3 flex flex-col">
+                        <h1 class="text-base font-bold sm:text-xl">Adriana Silva</h1>
+                        <h1 class="text-sm text-davysGray/50 sm:text-base">Estudiante de Diseño Gráfico</h1>
+                    </div>
+                </div>
+
+                <!-- Texto -->
+                <div class="w-full flex text-justify md:text-left md:w-2/3 md:pt-2 lg:w-3/4 xl:pt-8">
+                    <h1 class="text-sm md:text-lg xl:text-3xl">
+                        "Llegué a la escuela de arte con una pasión por el arte digital, y me sorprendieron los recursos y la orientación que recibí. 
+                          El equipo de vanguardia y el ambiente de colaboración me ayudaron a empujar los límites de mi creatividad."
+                    </h1>
+                </div>
+            </div>
+            
+            <!-- Testimonio -->
+            <div class="w-full flex flex-col mt-2 mb-12 md:flex-row">
+                <!-- Persona -->
+                <div class="w-full flex items-center md:text-center md:justify-center md:w-1/3 md:pr-4 md:flex-col lg:w-1/4 xl:w-1/6 xl:mr-16 xl:items-center xl:text-center">
+                    <img class="w-1/3 mr-6 rounded-full mb-4 md:w-3/4 md:mr-0" src="../../assets/estudiante_2.jpg" alt="Estudiante" draggable="false">
+                    <div class="w-2/3 flex flex-col">
+                        <h1 class="text-base font-bold sm:text-xl">Daniel Ortega</h1>
+                        <h1 class="text-sm text-davysGray/50 sm:text-base">Estudiante de Escultura</h1>
+                    </div>
+                </div>
+
+                <!-- Texto -->
+                <div class="w-full flex text-justify md:text-left md:w-2/3 md:pt-2 lg:w-3/4 xl:pt-8">
+                    <h1 class="text-sm md:text-lg xl:text-3xl">
+                        "El programa de escultura de la escuela de arte me permitió explorar diferentes medios y técnicas. El enfoque práctico y los comentarios personalizados de los profesores han sido fundamentales en mi crecimiento como artista."
+                    </h1>
                 </div>
             </div>
         </div>     
