--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -26,7 +26,7 @@
     
     
     <!-- Contenido -->
-    <div class="h-full w-screen">
+    <div class="h-full animate-load">
         <!-- Menu de navegacion mobil -->
         <div class="w-full h-full flex flex-col gap-12 justify-center text-center text-xl text-white font-bold fixed z-20 bottom-0 bg-indigo/80" *ngIf="menuMovil">
             <a href="" class="active:text-darkYellow">Inicio</a>
