--- a/src/app/diseno-grafico/diseno-grafico.component.html
+++ b/src/app/diseno-grafico/diseno-grafico.component.html
@@ -1,6 +1,6 @@
 <body class="min-h-screen bg-background">
     <!-- Header -->
-    <header class="z-50 h-20 w-screen px-4 sticky top-0 flex grow items-center bg-indigo drop-shadow-2xl sm:h-32 lg:px-0">
+    <header class="z-50 h-20 w-screen px-4 sticky top-0 flex grow items-center bg-indigo drop-shadow-2xl sm:h-36 lg:px-0">
         <!-- Logo y nombre de la institucion -->
         <div class="w-1/3 px-5 flex grow justify-between items-center sm:px-10 lg:px-6 xl:px-10">
             <div class="flex items-center xl:gap-5">
@@ -26,7 +26,7 @@
     
     
     <!-- Contenido -->
-    <div class="h-full w-screen">
+    <div class="h-full">
         <!-- Menu de navegacion mobil -->
         <div class="w-full h-full flex flex-col gap-12 justify-center text-center text-xl text-white font-bold fixed z-20 bottom-0 bg-indigo/80" *ngIf="menuMovil">
             <a href="" class="active:text-darkYellow">Inicio</a>
